syntax = "proto3";
package v1;

import "schema.proto";
import "resolver_map.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

/**
 * Config is a top-level config object. It is used internally by Qloo as a container for the entire set of config objects.
 */
message Config {
    repeated Schema schemas = 3; // the set of all schemas defined by the user
    repeated ResolverMap resolver_maps = 4; // the set of all resolver maps defined by the user
}